--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# Environment variables and sensitive configuration
+.env
+.env.local
+.env.*.local
+config/firebase.js
+
+# Sensitive API keys and credentials
+.env.production
+.env.development
