--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.6",
     "@reduxjs/toolkit": "^2.11.1",
+    "axios": "^1.13.2",
     "firebase": "^12.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
     "react-toastify": "^11.0.5",
-    "sass": "^1.96.0"
+    "sass": "^1.96.0",
+    "validator": "^13.15.26"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
