--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.6",
     "@reduxjs/toolkit": "^2.11.1",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
     "react": "^19.2.0",
