--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.11.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
     "react": "^19.2.0",
